<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_style"
    android:layout_height="match_parent"
    tools:context=".ui.ResultFragment">

    <ImageView

        android:id="@+id/rectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:visibility="gone"
        android:src="@drawable/ic_rectangle_69__2_"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView

        app:layout_constraintTop_toTopOf="@id/rectangle"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintLeft_toLeftOf="@id/rectangle"
        app:layout_constraintRight_toRightOf="@id/rectangle"
        android:src="@drawable/ic_union"
        android:background="@drawable/effect"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView

        android:id="@+id/over"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:src="@drawable/ic_game_over__1_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textStyle="normal"
        android:textSize="50sp"
        android:visibility="gone"
        android:text="You\nWin"
        android:fontFamily="@font/source_sans_pro_black_italic"
        android:textColor="#F7FF14"
        android:id="@+id/win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout

        android:id="@+id/linear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#F7FF14"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <TextView


            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/source_sans_pro_black_italic"
            android:text="@string/guess"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView

            android:id="@+id/natija"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:fontFamily="@font/source_sans_pro_black_italic"
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView

        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/effect"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_rectangle_69__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintVertical_bias="0.2" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_black_italic"
        android:text="@string/restart"
        android:textColor="#F7FF14"
        android:shadowColor="#F7FF14"
        android:shadowDy="0"
        android:textAllCaps="true"
        android:shadowDx="0"
        android:outlineSpotShadowColor="#F7FF14"
        android:outlineAmbientShadowColor="#F7FF14"
        android:shadowRadius="8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/restart"
        app:layout_constraintLeft_toLeftOf="@id/restart"
        app:layout_constraintRight_toRightOf="@id/restart"
        app:layout_constraintTop_toTopOf="@id/restart"/>

    <ImageView

        android:id="@+id/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/effect"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_rectangle_69__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restart"
        app:layout_constraintVertical_bias="0.1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_black_italic"
        android:text="@string/main_menu"
        android:textColor="#F7FF14"
        android:shadowColor="#F7FF14"
        android:shadowDy="0"
        android:shadowDx="0"
        android:textAllCaps="true"
        android:outlineSpotShadowColor="#F7FF14"
        android:outlineAmbientShadowColor="#F7FF14"
        android:shadowRadius="8"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/mainMenu"
        app:layout_constraintLeft_toLeftOf="@id/mainMenu"
        app:layout_constraintRight_toRightOf="@id/mainMenu"
        app:layout_constraintTop_toTopOf="@id/mainMenu"/>



</androidx.constraintlayout.widget.ConstraintLayout>